fixed spelling, spacing, footer

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
             <input type="text" name="Email" placeholder="Email" /> <br />
             </div>
             <input type="text" name="Subject" placeholder="Subject" /> <br />
-            <textarea cols="30" rows="7"  maxlength="1000"input type="text" name="Email" placeholder="Email"  > </textarea> <br />
+            <textarea cols="30" rows="7"  maxlength="1000"input type="text" name="Message" placeholder="Message"  ></textarea> <br />
             
             <input type="submit" name="Submit" />
        
