--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
             research activities.
         </p>
         <br>
-        <h4>&#9830; RESEARCH AND TEAAXHING INTERESTS</h4>
+        <h4>&#9830; RESEARCH AND TEACHING INTERESTS</h4>
 
         <ul class="list-group">
             <li class="list-group-item list-group-item-success"><strong>• Data Analysis and Machine Learning</strong></li>
