--- a/projects.html
+++ b/projects.html
@@ -7,16 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <title> Projects </title>
+
     <link href="album.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackedit.io/style.css" />
+    <link rel="stylesheet" href="projects.css" />
 </head>
 
 <body>
     <!-- Page Content -->
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="color:white; vertical-align: middle; align-content:center;" id="nav1">
-
+        
     </nav>
+    
     <!-- Page Content -->
     <!-- Add content and id in this container -->
     <!-- when adding new cards rename instances of 'projectPaneln', for n, project number -->
