--- a/projects.html
+++ b/projects.html
@@ -8,37 +8,41 @@
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <title> Projects </title>
     <link href="album.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackedit.io/style.css" />
 </head>
 
 <body>
     <!-- Page Content -->
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="color:white; vertical-align: middle; align-content:center;" id="nav1">
-
     </nav>
     <!-- Page Content -->
     <!-- Add content and id in this container -->
     <!-- when adding new cards rename instances of 'projectPaneln', for n, project number -->
     <div class="container" id="c1">
-        <div class="stackedit__html"><h1 id="smart-glove-iot-project" style="text-align:center">Smart Glove IoT Project</h1>
+        <div class="stackedit__html">
+            <h1 id="smart-glove-iot-project" style="text-align:center">Smart Glove IoT Project</h1>
+            <hr />
             <h4 id="university-of-houston-downtown-spring-2018">University of Houston Downtown, Spring 2018</h4>
             <h3 id="abstract">Abstract:</h3>
-            <p>The intention is to attach various sensors systems from flex sensors, pressure sensors and accelerometers into a glove. Then inputting the acquired data from the user into a dedicated machine learning algorithm program to translate them into gesture output for interacting with the digital world.<br>
-            The most important aspect of this project is the application of the gesture data</p>
-            <p>. Using the gestures recorded by the glove, the user can perform potentially limitless applications, from interacting with a virtual world such as playing a virtual piano, to operating complex machinery remotely such as a surgeon performing an operation through precise robotic arms in another location. The glove can also be used for medical purposes to monitor the patient’s hand movement over time.</p>
-            <img src="assets\img\smartglove.png" alt=""/>
-            <img src="assets\img\smartglove1.png" alt=""/>
-            </div>
-            <div class="stackedit__html"><h1 id="intelligent-bolt-and-interface-inspection-and-monitoring" style="text-align:center">Intelligent Bolt and Interface Inspection and Monitoring</h1>
-                <h4>University of Houstown Downtown and University of Houston, Fall 2018</h4>
-                <h3 id="abstract">Abstract</h3>
-                <p>Bridges are key structures that hold civilization together, they help transport people, goods and services. Without them, it is impossible to maintain life as we know it. Unfortunately, every bridge will fail and need to be rebuilt at one point, and the process of assessing a bridge’s condition is not only expensive and time-consuming but also quite risky. One of the most common causes of failures is a failing bolt, metal bolts are crucial components that hold a bridge together. However, to check for bolts on the side and underneath a bridge would require a worker to strap on safety harnesses and drop down to the side of the bridge, exposing themselves to dangerous winds and equipment failure which could injure or even kill them.</p>
-                <p>Therefore, the main objective is to develop a non-invasive bolt integrity monitoring system that is easy to use and doesn’t force the operator into risky conditions. To achieve this, the current proposal is to develop a remote-controlled drone that can approach the target site to assess the condition of each individual bolt. Machine learning methods such as deep learning and neural networks will be used to accurately determine the bolt condition from sensor data.</p>
-                <img src="assets\img\DroneA.PNG" alt=""/>
-                <img src="assets\img\DroneA2.PNG" alt=""/>
-                </div> 
-
+            <p>
+                The intention is to attach various sensors systems from flex sensors, pressure sensors and accelerometers into a glove. Then inputting the acquired data from the user into a dedicated machine learning algorithm program to translate them into gesture output for interacting with the digital world.
+            </p>                
+            <p>
+                The most important aspect of this project is the application of the gesture data. Using the gestures recorded by the glove, the user can perform potentially limitless applications, from interacting with a virtual world such as playing a virtual piano, to operating complex machinery remotely such as a surgeon performing an operation through precise robotic arms in another location. The glove can also be used for medical purposes to monitor the patient’s hand movement over time.
+            </p>
+            <img src="assets\img\smartglove.png" alt="" />
+            <img src="assets\img\smartglove1.png" alt="" />
+        </div>
+        <div class="stackedit__html">
+            <h1 id="intelligent-bolt-and-interface-inspection-and-monitoring" style="text-align:center">Intelligent Bolt and Interface Inspection and Monitoring</h1>
+            <hr />
+            <h4>University of Houstown Downtown and University of Houston, Fall 2018</h4>
+            <h3 id="abstract">Abstract:</h3>
+            <p>Bridges are key structures that hold civilization together, they help transport people, goods and services. Without them, it is impossible to maintain life as we know it. Unfortunately, every bridge will fail and need to be rebuilt at one point, and the process of assessing a bridge’s condition is not only expensive and time-consuming but also quite risky. One of the most common causes of failures is a failing bolt, metal bolts are crucial components that hold a bridge together. However, to check for bolts on the side and underneath a bridge would require a worker to strap on safety harnesses and drop down to the side of the bridge, exposing themselves to dangerous winds and equipment failure which could injure or even kill them.</p>
+            <p>Therefore, the main objective is to develop a non-invasive bolt integrity monitoring system that is easy to use and doesn’t force the operator into risky conditions. To achieve this, the current proposal is to develop a remote-controlled drone that can approach the target site to assess the condition of each individual bolt. Machine learning methods such as deep learning and neural networks will be used to accurately determine the bolt condition from sensor data.</p>
+            <img src="assets\img\DroneA.PNG" alt="" />
+            <img src="assets\img\DroneA2.PNG" alt="" />
+        </div> 
     </div>
      
     <!-- JavaScript -->
