--- a/publications.html
+++ b/publications.html
@@ -16,12 +16,11 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="color:white; vertical-align: middle; align-content:center;" id="nav1">
     </nav>
     <!-- Page Content -->
-    <!-- Add content and id in this container -->
     <div class="container" id="c1">
        <h3 style="padding-top:10px;"> &#9830; PUBLICATIONS </h3>
         <br>
-        <!-- Research and Teaching Interests -->
-        <div id="projects-overview">
+        <!-- Publications -->
+        <div id="publications-overview" class="grow">
             <p>
                 <!--<img src="assets/img/star.png" alt=""style=";width:1.5%; height:1.5%">-->
                 <b style="font-size: 16pt;"><font size="4">⭐</font>Peer-review Journals </b>
@@ -35,7 +34,10 @@
         <li>F. Hu, Y. Lu, A. V. Vasilakos, Q. Hao, R. Ma, Y. Patil, <strong><u>Ting Zhang</u></strong>, J. Lu, X. Li, and N. N. Xiong, “Robust cyber-physical systems: Concept, models, and implementation,” <em>Future Generation Computer Systems</em>, vol. 56, pp. 449–475, 2016.</li>
                 </ul>
             </p>
+        </div>
+        <br>
 
+            <div id="publications-overview" class="grow">
             <p>
                 <b style="font-size: 16pt;" ><font size="4">⭐</font>Peer-reviewed Conferences </b>
                 <ul>
@@ -62,7 +64,9 @@
         <li><strong><u>Ting Zhang</u></strong>, L. Tang, and S. Mukherjee, “Cluster analysis of simulated gravitational wave triggers using constrained validation clustering,” in <em>APS Meeting Abstracts</em>, vol. 1, 2010, p. 2003</li>
              </ul>
             </p>
-
+      </div> 
+      </br
+            <div id="publications-overview" class="grow">
             <p>
                 <b style="font-size: 16pt;"><font size="4">⭐</font>Book Chapters </b>
                    <ul>
@@ -72,7 +76,10 @@
         <li>Lv Wu, <strong><u>Ting Zhang</u></strong>, and Fei Hu. Application of hdp-hmm in recognition of dynamic hand gestures. <em>Cyber-Physical Systems: Integrated Computing and Engineering Design</em>, page 1063, 2013.</li>
          </ul>
             </p>
+        </div> 
+        </br>
 
+            <div id="publications-overview" class="grow">
             <p>
                 <b style="font-size: 16pt;"><font size="4">⭐</font>Workshops </b>
                     <ul>
