--- a/publications.html
+++ b/publications.html
@@ -23,7 +23,7 @@
         <div id="publications-overview" class="grow">
             <p>
                 <!--<img src="assets/img/star.png" alt=""style=";width:1.5%; height:1.5%">-->
-                <b style="font-size: 16pt;"><font size="4">⭐</font>Peer-review Journals </b>
+                <b style="font-size: 16pt;"><font size="4">⭐</font>Peer-reviewed Journals </b>
                 <ul>
         <li>J. Lu, <strong><u>Ting Zhang</strong></u>, Q. Sun, Q. Hao, and F. Hu, “Binary compressive tracking,” <em>IEEE
          Transactions on Aerospace and Electronic Systems.</em>, vol. 53, pp. 1755–1768, 2017.</li>
@@ -65,7 +65,7 @@
              </ul>
             </p>
       </div> 
-      </br
+    </br>
             <div id="publications-overview" class="grow">
             <p>
                 <b style="font-size: 16pt;"><font size="4">⭐</font>Book Chapters </b>
