add small stuffs look better

--- a/activities.html
+++ b/activities.html
@@ -21,7 +21,7 @@
     <!-- Add content and id in this container -->
     <!-- when adding new cards rename instances of 'projectPaneln', for n, project number -->
     <div class="container" id="c1">
-        <h1>Activities</h1>
+        <h3  style="padding-top:10px;">&#9830; ACTIVITIES</h3>
         <div class="card text-white bg-info mb-3" style="max-width: 100%;">
             <div class="card-header">Journal and Conference Reviewer</div>
             <div class="card-body">
