--- a/home.html
+++ b/home.html
@@ -23,7 +23,9 @@
         <h3 style="padding-top:10px;">&#9830;	BIOGRAPHY</h3>
 
         <p>
+               
             <img src="assets/img/TingZhang.jpg" alt="professor" style="width:271px;height:400px; float:right; padding-left:10px;">
+            <div id="home" class="grow">
             Dr. Ting Zhang holds a Ph.D. in Electrical Engineering from the University of Alabama.
             Her main research interests include sensor systems, intelligent algorithms and
             virtual reality. She has published more than twenty papers on referred journals
@@ -32,6 +34,7 @@
             structures, and web programming. She supervises students on senior projects and
             research activities.
         </p>
+    </div>
         <br>
         <h4>&#9830; RESEARCH AND TEACHING INTERESTS</h4>
 
