added border (accidentally removed before in publications.html) added padding to text

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
         <p>
                
             <img src="assets/img/TingZhang.jpg" alt="professor" style="width:271px;height:400px; float:right; padding-left:10px;">
-            <div id="home" class="grow">
+            <div id="home">
             Dr. Ting Zhang holds a Ph.D. in Electrical Engineering from the University of Alabama.
             Her main research interests include sensor systems, intelligent algorithms and
             virtual reality. She has published more than twenty papers on referred journals
