--- a/publications.html
+++ b/publications.html
@@ -66,7 +66,7 @@
             </p>
       </div> 
     </br>
-            <div id="home" class="grow">
+            <div id="publicationPanel" class="grow">
             <p>
                 <b style="font-size: 16pt;"><font size="4">⭐</font>Book Chapters </b>
                    <ul>
