--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
 
         <p>
                
-            <img src="assets/img/TingZhang.jpg" alt="professor" style="width:271px;height:400px; float:right; padding-left:10px;">
+            <img src="assets/img/TingZhang.jpg" alt="professor" style="width:30%; float:right; padding-left:10px;padding-top:10px;">
             <div id="home" class="grow">
             Dr. Ting Zhang holds a Ph.D. in Electrical Engineering from the University of Alabama.
             Her main research interests include sensor systems, intelligent algorithms and
