--- a/publications.html
+++ b/publications.html
@@ -65,8 +65,8 @@
              </ul>
             </p>
       </div> 
-    </br>
-            <div id="home" class="grow">
+    </br> 
+            <div id="publications-overview" class="grow">
             <p>
                 <b style="font-size: 16pt;"><font size="4">⭐</font>Book Chapters </b>
                    <ul>
