--- a/activities.html
+++ b/activities.html
@@ -22,59 +22,78 @@
     <!-- when adding new cards rename instances of 'projectPaneln', for n, project number -->
     <div class="container" id="c1">
         <h3  style="padding-top:10px;">&#9830; ACTIVITIES</h3>
-        <div class="card text-white bg-info mb-3" style="max-width: 100%;">
-            <div class="card-header">Journal and Conference Reviewer</div>
-            <div class="card-body">
-                    <ul>
-                            <li>IEEE Global Humanitarian Technology Conference</li>
-                            <li>International Journal of Telemedicine and Applications</li>
-                            <li>IEEE International Conference on Mobile Cloud Computing, Services, and Engineering</li>
-                            <li>IEEE Conference on Engineering in Medicine and Biology</li>
-                            <li>International Journal on BioMed Research</li>
-                            <li>Book proposal reviewer on Vehicle communications, IGI Global</li>
-                        </ul>
-            </div>
-        </div>
 
-        <div class="card text-white bg-secondary mb-3" style="max-width: 100%;">
-                <div class="card-header">Workshop Organizer</div>
-                <div class="card-body">
-                        <ul>
-                                <li>
-                                        <p style="float:right">Aug. 2012</p>Southeastern Workshop on Cognitive Sensing, Computing &amp; Networking and Their Applications inHuman-Cyber-Physical Systems</li>
-                                <li>Sponsored byNSF (#1059212) and Southeastern Center for Electrical Engineering Education(SCEEE-11-001)</li>
-                        </ul>
-                </div>
-        </div>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+<div class="accordion"> 
+  <ul class="accordion__list">
+    <li class="accordion__item">
+      <div class="accordion__itemTitleWrap">
+        <h3 class="accordion__itemTitle">Journal and Conference Reviewer</h3>
+        <div class="accordion__itemIconWrap"><svg viewBox="0 0 24 24"><polyline fill="none" points="21,8.5 12,17.5 3,8.5 " stroke="#FFF" stroke-miterlimit="10" stroke-width="2"/></svg></div>
+      </div>
+      <div class="accordion__itemContent">
+        <ul>
+                <li>IEEE Global Humanitarian Technology Conference</li>
+                <li>International Journal of Telemedicine and Applications</li>
+                <li>IEEE International Conference on Mobile Cloud Computing, Services, and Engineering</li>
+                <li>IEEE Conference on Engineering in Medicine and Biology</li>
+                <li>International Journal on BioMed Research</li>
+                <li>Book proposal reviewer on Vehicle communications, IGI Global</li>
+            </ul>
+      </div>
+    </li>
 
-        <div class="card text-white bg-info mb-3" style="max-width: 100%;">
-                <div class="card-header">Conference Volunteer</div>
-                <div class="card-body">
-                        <p style="float:right">Aug. 2012</p>
-                        IEEE Engineering in Medicine and Biology Society (EMBC)
-                    
-                </div>
+    <li class="accordion__item">
+        <div class="accordion__itemTitleWrap">
+          <h3 class="accordion__itemTitle">Conference Talks and Technical Presentations</h3>
+          <div class="accordion__itemIconWrap"><svg viewBox="0 0 24 24"><polyline fill="none" points="21,8.5 12,17.5 3,8.5 " stroke="#FFF" stroke-miterlimit="10" stroke-width="2"/></svg></div>
         </div>
+        <div class="accordion__itemContent">
+                <p><h4>UHD Scholar Academy Orientation</h4><br />Houston, TX<br />Topic: Virtual Reality &amp; Stroke Rehabilitation<br />Jul. 2017)</p>
+                <p><h4>IEEE branch at Galveston</h4><br />Nasa Johnson Space Center , TX<br />Topic: Da Vinci &ndash; Data Analytics in Various Intelligent Human-centered Systems<br />Jul. 2016)</p>
+                <p><h4>IEEE EMBC</h4><br />Orlando, FL<br />Topic: Monitoring of paces and gaits using binary PIR Sensors with rehabilitation treadmill<br />Jul. 2016)</p>
+                <p><h4>IEEE GHTC</h4><br />Seattle, WA<br />Topic: Robot-assisted Intelligent Emergency System for Individual Elderly Independent Living <br />Jul. 2016)</p>
+                <p><h4>Project Seminar on Rehabilitation Systems</h4><br />Tuscaloosa, AL<br />Topic: Intelligent Wearable Sensor Systems for Disability Rehabilitation<br />Jul. 2015</p>
+                <p><h4>Project Seminar on Virtual Reality Rehabilitation</h4><br />Tuscaloosa, AL<br />Topic: Virtual Reality Game and Rehabilitation with Smart Gloves<br />Apr. 2015</p>
+                <h4>IEEE International Conference on Global Humanitarian Technology</h4>
+                <p>San Jose, CA<br />Topic:<br />Measuring activities and counting steps with the smartsocks - an unobtrusive and accurate<br />method<br />Oct. 2014</p>
+                <p><h4>IEEE International Conference on Global Humanitarian Technology</h4><br />San Jose, CA<br />Topic:<br />A sensor based virtual piano biofeedback system for stroke rehabilitation<br />Oct. 2014</p>
+                <p><h4>IEEE International Conf. on Point-Of-Care Technologies</h4><br />Seattle, WA<br />Topic:<br />Measuring gait symmetry in children with cerebral palsy using the smartshoe Oct. 2014</p>
+                <p><h4>IEEE International Conf. on Point-Of-Care Technologies</h4><br />Seattle, WA<br />Topic:<br />Bluetooth low energy for wearable sensor-based healthcare systems<br />Oct. 2014</p>
+                <p><h4>Women in Engineering Workshop<br />Tuscaloosa, AL</h4><br />Topic:<br />Using Machine Learning in Monitoring Physical Activity with Shoe Sensors<br />Oct. 2013</p>
+                <p><h4>Workshop for Women in Machine Learning (WiML)</h4><br />Lake Tahoe, CA<br />Topic:<br />Classification of Postures and Activities for Stroke Patients<br />Dec. 2012</p>
+                <p><h4>EEE Engineering in Medicine and Biology Society (EMBC)</h4><br />San Diego, CA<br />Topic:<br />Classification of Posture and Activities by Using Decision Trees<br />Aug. 2012</p>
+        </div>
+      </li>
 
-        <div class="card text-white bg-secondary mb-3" style="max-width: 100%;">
-                <div class="card-header">Conference Talks and Technical Presentations</div>
-                <div class="card-body">
-                        <p><h4>UHD Scholar Academy Orientation</h4><br />Houston, TX<br />Topic: Virtual Reality &amp; Stroke Rehabilitation<br />Jul. 2017)</p>
-                        <p><h4>IEEE branch at Galveston</h4><br />Nasa Johnson Space Center , TX<br />Topic: Da Vinci &ndash; Data Analytics in Various Intelligent Human-centered Systems<br />Jul. 2016)</p>
-                        <p><h4>IEEE EMBC</h4><br />Orlando, FL<br />Topic: Monitoring of paces and gaits using binary PIR Sensors with rehabilitation treadmill<br />Jul. 2016)</p>
-                        <p><h4>IEEE GHTC</h4><br />Seattle, WA<br />Topic: Robot-assisted Intelligent Emergency System for Individual Elderly Independent Living <br />Jul. 2016)</p>
-                        <p><h4>Project Seminar on Rehabilitation Systems</h4><br />Tuscaloosa, AL<br />Topic: Intelligent Wearable Sensor Systems for Disability Rehabilitation<br />Jul. 2015</p>
-                        <p><h4>Project Seminar on Virtual Reality Rehabilitation</h4><br />Tuscaloosa, AL<br />Topic: Virtual Reality Game and Rehabilitation with Smart Gloves<br />Apr. 2015</p>
-                        <h4>IEEE International Conference on Global Humanitarian Technology</h4>
-                        <p>San Jose, CA<br />Topic:<br />Measuring activities and counting steps with the smartsocks - an unobtrusive and accurate<br />method<br />Oct. 2014</p>
-                        <p><h4>IEEE International Conference on Global Humanitarian Technology</h4><br />San Jose, CA<br />Topic:<br />A sensor based virtual piano biofeedback system for stroke rehabilitation<br />Oct. 2014</p>
-                        <p><h4>IEEE International Conf. on Point-Of-Care Technologies</h4><br />Seattle, WA<br />Topic:<br />Measuring gait symmetry in children with cerebral palsy using the smartshoe Oct. 2014</p>
-                        <p><h4>IEEE International Conf. on Point-Of-Care Technologies</h4><br />Seattle, WA<br />Topic:<br />Bluetooth low energy for wearable sensor-based healthcare systems<br />Oct. 2014</p>
-                        <p><h4>Women in Engineering Workshop<br />Tuscaloosa, AL</h4><br />Topic:<br />Using Machine Learning in Monitoring Physical Activity with Shoe Sensors<br />Oct. 2013</p>
-                        <p><h4>Workshop for Women in Machine Learning (WiML)</h4><br />Lake Tahoe, CA<br />Topic:<br />Classification of Postures and Activities for Stroke Patients<br />Dec. 2012</p>
-                        <p><h4>EEE Engineering in Medicine and Biology Society (EMBC)</h4><br />San Diego, CA<br />Topic:<br />Classification of Posture and Activities by Using Decision Trees<br />Aug. 2012</p>
-                </div>
+      <li class="accordion__item">
+        <div class="accordion__itemTitleWrap">
+          <h3 class="accordion__itemTitle">Conference Volunteer</h3>
+          <div class="accordion__itemIconWrap"><svg viewBox="0 0 24 24"><polyline fill="none" points="21,8.5 12,17.5 3,8.5 " stroke="#FFF" stroke-miterlimit="10" stroke-width="2"/></svg></div>
         </div>
+        <div class="accordion__itemContent">
+                <p style="float:right">Aug. 2012</p>
+                IEEE Engineering in Medicine and Biology Society (EMBC)
+        </div>
+      </li>
+
+
+      <li class="accordion__item">
+        <div class="accordion__itemTitleWrap">
+          <h3 class="accordion__itemTitle">Workshop Organizer</h3>
+          <div class="accordion__itemIconWrap"><svg viewBox="0 0 24 24"><polyline fill="none" points="21,8.5 12,17.5 3,8.5 " stroke="#FFF" stroke-miterlimit="10" stroke-width="2"/></svg></div>
+        </div>
+        <div class="accordion__itemContent">
+                <ul>
+                        <li>
+                                <p style="float:right">Aug. 2012</p>Southeastern Workshop on Cognitive Sensing, Computing &amp; Networking and Their Applications inHuman-Cyber-Physical Systems</li>
+                        <li>Sponsored byNSF (#1059212) and Southeastern Center for Electrical Engineering Education(SCEEE-11-001)</li>
+                </ul>
+        </div>
+      </li>
+   
+  </ul>
+</div>
         <!-- END OF PROJECTS SECTION -->
     </div>
     <!-- JavaScript -->
