--- a/services.html
+++ b/services.html
@@ -22,9 +22,9 @@
     <!-- when adding new cards rename instances of 'projectPaneln', for n, project number -->
     <div class="container" id="c1">
                 <h3  style="padding-top:10px;">&#9830; SERVICES</h3>
-        <div class="card text-white bg-info mb-3" style="max-width: 100%;">
+        <div class="card text-white bg-warning mb-3" style="max-width: 100%;">
 
-                <div class="card-header">Professional Service</div>
+                <div class="card-header"><b style="font-size: 16pt;"><font size="4"></font>Professional Service </b></div>
                 <div class="card-body">
                         
                         <p>IEEE GBS presentation (2016) <br /></p>
@@ -33,8 +33,8 @@
                 </div>
         </div>
 
-        <div class="card text-white bg-secondary mb-3" style="max-width: 100%;">
-                        <div class="card-header">University Service</div>
+        <div class="card text-white bg-info mb-3" style="max-width: 100%;">
+                        <div class="card-header"><b style="font-size: 16pt;"><font size="4"></font>University Service</b></div>
                         <div class="card-body">
                                         <p>Scholar Academy Faculty Review Committee (2017)</p>
                                         <p>Commencement (2017)</p>
@@ -54,12 +54,13 @@
                         </div>
                 </div>
 
-                <div class="card text-white bg-info mb-3" style="max-width: 100%;">
-                                <div class="card-header">Community Service</div>
+                <div class="card text-white bg-warning mb-3" style="max-width: 100%;">
+                                <div class="card-header"><b style="font-size: 16pt;"><font size="4"></font>Community Service</b></div>
                                 <div class="card-body">
                                                 <p>Robotic Competition Judge (2017)</p>
                                 </div>
                         </div>
+        
         <!-- END OF PROJECTS SECTION -->
     </div>
     <!-- JavaScript -->
