--- a/experience.html
+++ b/experience.html
@@ -26,7 +26,7 @@
         <div class="panel-group" id="panelGroup">
             <!-- Panel 1 -->
             <div class="panel">
-                <button type="button" class="btn btn-success-panel btn-block" data-toggle="collapse" data-target="#panel" style="max-width:inherit;" aria-expanded="true">
+                <button type="button" class="btn btn-success-panel btn-block instagram" data-toggle="collapse" data-target="#panel" style="max-width:inherit;" aria-expanded="true">
                     <!-- Position -->
                     <h5 style="float:left;"> SENIOR RESEARCH ASSISTANT </h5>
                     <!-- Location -->
@@ -63,7 +63,7 @@
             </div>
             <!-- Panel 2 -->
             <div class="panel">
-                <button type="button" class="btn btn-success-panel btn-block" data-toggle="collapse" data-target="#panel2" style="max-width:inherit;" aria-expanded="false">
+                <button type="button" class="btn btn-success-panel btn-block instagram" data-toggle="collapse" data-target="#panel2" style="max-width:inherit;" aria-expanded="false">
                     <!-- Position -->
                     <h5 style="float:left;"> RESEARCH ASSISTANT </h5>
                     <!-- Location -->
@@ -97,7 +97,7 @@
             </div>
             <!-- Panel 3 -->
             <div class="panel">
-                <button type="button" class="btn btn-success-panel btn-block" data-toggle="collapse" data-target="#panel3" style="max-width:inherit;" aria-expanded="false">
+                <button type="button" class="btn btn-success-panel btn-block instagram" data-toggle="collapse" data-target="#panel3" style="max-width:inherit;" aria-expanded="false">
                     <!-- Position -->
                     <h5 style="float:left;"> RESEARCH ASSISTANT </h5>
                     <!-- Location -->
@@ -127,7 +127,7 @@
             </div>
             <!-- Panel 4 -->
             <div class="panel">
-                <button type="button" class="btn btn-success-panel btn-block" data-toggle="collapse" data-target="#panel4" style="max-width:inherit;" aria-expanded="false">
+                <button type="button" class="btn btn-success-panel btn-block instagram" data-toggle="collapse" data-target="#panel4" style="max-width:inherit;" aria-expanded="false">
                     <!-- Position -->
                     <h5 style="float:left;"> RESEARCH ASSISTANT </h5>
                     <!-- Location -->
