--- a/empty template.html
+++ b/empty template.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-    <title> Projects </title>
+    <title> Section </title>
     <link href="album.css" rel="stylesheet">
 </head>
 
@@ -14,14 +14,18 @@
     <!-- Page Content -->
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="color:white; vertical-align: middle; align-content:center;" id="nav1">
-
+    
     </nav>
     <!-- Page Content -->
     <!-- Add content and id in this container -->
-    <!-- when adding new cards rename instances of 'projectPaneln', for n, project number -->
     <div class="container" id="c1">
         
-        <!-- END OF PROJECTS SECTION -->
+        <!-- ENTER INFO HERE -->   
+        <!-- Some IDS to use (rest in album.css labeled by #idName) -->
+        <!-- id = "projectText"
+             id = "panel"
+             id = "panelGroup" -->
+        <!-- END OF SECTION -->
     </div>
     <!-- JavaScript -->
     <!-- Bootstrap core JavaScript
