--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
           
             <h1 id="smart-glove-iot-project" style="text-align:center">Smart Glove IoT Project</h1>
             <hr />
-            <div id="publications-overview" class="grow">
+            <div id="project_page" >
             <h4 id="university-of-houston-downtown-spring-2018"><strong>University of Houston Downtown, Spring 2018</strong></h4>
             <h3 id="abstract">&#9679; Abstract:</h3>
             <p>
@@ -41,7 +41,7 @@
         <div class="stackedit__html">
             <h1 id="intelligent-bolt-and-interface-inspection-and-monitoring" style="text-align:center">Intelligent Bolt and Interface Inspection and Monitoring</h1>
             <hr />
-
+            <div id="project_page" >
             <h4><strong>University of Houstown Downtown and University of Houston, Fall 2018</strong></h4>
             <h3 id="abstract">&#9679; Abstract:</h3>
             <p>Bridges are key structures that hold civilization together, they help transport people, goods and services. Without them, it is impossible to maintain life as we know it. Unfortunately, every bridge will fail and need to be rebuilt at one point, and the process of assessing a bridge’s condition is not only expensive and time-consuming but also quite risky. One of the most common causes of failures is a failing bolt, metal bolts are crucial components that hold a bridge together. However, to check for bolts on the side and underneath a bridge would require a worker to strap on safety harnesses and drop down to the side of the bridge, exposing themselves to dangerous winds and equipment failure which could injure or even kill them.</p>
