--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,7 @@
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <title> Projects </title>
     <link href="album.css" rel="stylesheet">
+    
 </head>
 
 <body>
@@ -19,6 +20,7 @@
     <!-- Add content and id in this container -->
     <!-- when adding new cards rename instances of 'projectPaneln', for n, project number -->
     <div class="container" id="c1">
+        <h3 style = "padding-top:10px;padding-bottom:50px;"> &#9830; PROJECTS</h3>
         <div class="stackedit__html">
             <h1 id="smart-glove-iot-project" style="text-align:center">Smart Glove IoT Project</h1>
             <hr />
